<resources>
    <string name="app_name">LyftOxi</string>
    <string name="tagline">R I D E \tS H A R I N G \t A P P</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share Your Ride</string>
    <string name="new_to_lyftoxi">New to LyftOxi?</string>
    <string name="take">Find A Ride</string>
    <string name="home">Home</string>
    <string name="title_activity_take_ride">Take A Ride</string>
    <string name="title_add_edit_car">Car Details</string>
    <string name="title_create_route">Route Details</string>
    <string name="title_confirm_ride">Confirm Your Ride</string>
    <string name="share_your_ride">Share Your Ride</string>
    <string name="my_suggested_rides">My Suggested Rides</string>
    <string name="my_shared_rides">My Upcoming Shared Rides</string>
    <string name="my_interested_rides">My Interested Rides</string>
    <string name="take_a_ride">Take A Ride</string>
    <string name="title_activity_share_ride">Share Your Ride</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_signup">Signup</string>
    <string name="cancelled">Cancelled</string>
    <string name="users_message">Comment of Ride Owner</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="you_can_also..">You Can join with your existing profile. \n Nothing will be posted.</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="dob">D.O.B</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dotted_line">|</string>
    <string name="rupee">\u20B9</string>
    <string name="contactRideOwner">Contact Ride Owner</string>
    <string name="owner_comment">Comment</string>
    <string name="phone_number_sample">0000000000</string>
    <string name="starting_at">Starting @</string>
    <string name="start_date">Ride Start Date</string>
    <string name="start_time">Ride Start Time</string>
    <string name="interested">interested?</string>
    <string name="not_interested">Not interested?</string>
    <string name="not_one_interested">No one has yet shown interest in this ride</string>
    <string name="source">Source</string>
    <string name="via">Via</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="luggage">Luggage</string>
    <string name="seat">Seat</string>
    <string name="ride_of">Ride of </string>
    <string name="ac">AC</string>
    <string name="travellers_interested">Travellers Interested</string>
    <string name="priceText">Ride Fare (in \u20B9)</string>
    <string name="anything_else">Specific Ride Instructions</string>
    <string name="carFeatureText">Car Features for this Ride</string>
    <string name="music">Music</string>
    <string name="smoking">Smoking</string>
    <string name="air_bag">Air Bag</string>
    <string name="max_wait">Max wait (mins)</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="address">Address</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin">PIN</string>
    <string name="enter_OTP">Enter OTP</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="save">Save</string>
    <string name="add_car">Add a Car</string>
    <string name="going_somewhere">Let\'s Go \nTogether...!</string>
    <string name="no_internet_connection">No Internet !</string>
    <string name="no_internet_connection_please_try_again">Please check your Network connectivity</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="call">Call</string>
    <string name="msg">Message</string>
    <string name="repeat_till">Repeat till</string>
    <string name="marked_interested">Marked as Interested</string>
    <string name="marked_uninterested">Marked as Uninterested</string>
    <string name="fare">Fare: </string>
    <string name="price_decided_by_owner"> (Price Decided By Ride Owner)</string>
    <string name="title_section1">BOOM</string>
    <string name="title_section2">TICK</string>
    <string name="title_section3">BLA</string>
    <string name="title_section4">Take A ride</string>
    <string name="car_delete_message">Do you really want to delete this car ?</string>
    <string name="cancel_ride">Do you really want to cancel this ride ?</string>
    <string name="back">Back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_name">Guest</string>
    <string name="no_mobile">N.A</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="select_car">Select Car</string>
    <string name="own_cars">Own Cars</string>
    <string name="rented_cars">Rented Cars</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_model">Car Model</string>
    <string name="car_number">Car Number (WB 02 AB 1234)</string>
    <string name="car_color">Car Color</string>
    <string name="route_name">Route Name</string>
    <string name="title_activity_take_ride_details">Take Ride Details</string>
    <string name="title_activity_my_shared_rides">My Upcoming Shared Rides</string>
    <string name="title_activity_my_interested_rides">My Interested Rides</string>
    <string name="title_activity_my_suggested_rides">My Suggested Rides</string>
    <string name="title_activity_other_ride_details">Other Ride Details</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="you_have_shared_no_rides">You have shared no rides! \n Please share a ride now !</string>
    <string name="no_rides">No rides found! \n Please try with some other places and other filters</string>
    <string name="you_have_no_interested_rides">You have not shown interest in any rides! \n Please visit take a ride now, to show interest</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_find_ride">Find A Ride</string>
    <string name="title_activity_rides">Rides</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_rented_car">Rented Car Details</string>
    <string name="title_my_ride_details">My Ride Details</string>
    <string name="error_message_start_time_120_days">Start time must be within 120 days</string>
    <string name="error_message_start_time_15_mins">Start time must be 15 mins more than current time.</string>
    <string name="error_message_start_date_bkank">Start date cannot be blank</string>
    <string name="error_message_start_time_bkank">Start time cannot be blank</string>
    <string name="ext_storage_write_permission_explanation_1">We need Permission save profile picture in your device for further use\n Highly recommended to get better response from co-travellers</string>
    <string name="ext_storage_write_permission_explanation_2">Highly recommended to get better response from co-travellers\n Please enable from device settings </string>
    <string name="faq">FAQ</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>