<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lyftoxi.lyftoxi.OtherRideDetailsActivity">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px">

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_otherRideDetailsPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/otherRideDetailsPrice"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryDark"
                android:textSize="18sp"
                android:textStyle="normal"
                android:inputType="number"
                android:hint="@string/priceText"
                android:layout_marginLeft="20dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_otherRideDetailsUserMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/otherRideDetailsUserMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:hint="@string/anything_else"
                android:layout_marginLeft="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <View style="@style/HorizontalDivider"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/carFeatureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="italic"
            android:textSize="20sp"
            android:text="@string/carFeatureText"
            android:textColor="@color/commentheader"
            android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/carDetailsBackground"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <CheckBox android:id="@+id/otherRideDetailsRadioAc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac"
                />
            <CheckBox android:id="@+id/otherRideDetailsRadioMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                />
            <CheckBox android:id="@+id/otherRideDetailsRadioSmoking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smoking"
                />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox android:id="@+id/otherRideDetailsRadioAirbag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_bag"
                    />

                <CheckBox android:id="@+id/otherRideDetailsRadioLuggage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luggage"
                    />

            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/button"
            android:id="@+id/otherRideDetailsSave"
            android:text="@string/proceed"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>