<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView"
            android:background="@android:color/white"
            android:src="@drawable/ic_directions_car_black_48dp"
            android:tint="@color/ownCar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/own_cars"
            android:background="@android:color/white"
            android:textColor="@color/ownCar"
            android:textSize="15sp"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/selectCarTypeOwnCar"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView2"
            android:background="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_directions_car_black_48dp"
            android:tint="@color/rentedCar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rented_cars"
            android:id="@+id/selectCarTypeRentedCar"
            android:background="@android:color/white"
            android:textColor="@color/rentedCar"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/selectCarTypeBack"
        android:background="@color/primaryButtonBackgroundColor"
        android:textColor="@color/primaryButtonTextColor"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
